syntax = "proto3";

option go_package = "gitlab.com/StackVista/agent-transport-protocol/pkg/model/connection";

package stackstate.process_agent;

import "github.com/DataDog/sketches-go/ddsketch/pb/ddsketch.proto";

enum ConnectionType {
  tcp = 0;
  udp = 1;
}

enum ConnectionFamily {
  v4 = 0;
  v6 = 1;
}

enum ConnectionDirection {
  none = 0;
  outgoing = 1;
  incoming = 2;
}

message ConnectionMetricValue {
  oneof value {
    DDSketch histogram = 1;
    double number = 2;
  }
}

message ConnectionMetric {
  string name = 1;
  map<string, string> tags = 2;
  ConnectionMetricValue value = 3;
}

message Connection {
  int32 pid = 1;
  // 2 is deprecated
  // 3 is deprecated
  // 4 is deprecated
  Addr laddr = 5; // Local address
  Addr raddr = 6; // Remote address
  // 7 is deprecated
  float bytesSentPerSecond = 8;
  float bytesReceivedPerSecond = 9;
  ConnectionFamily family = 10;
  ConnectionType type = 11;
  int64 pidCreateTime = 12;
  string namespace = 50; // local
  ConnectionDirection direction = 51;
  string connectionIdentifier = 52;
  string applicationProtocol = 53;
  repeated ConnectionMetric metrics = 54;
}

message Addr {
  Host host = 1;
  string ip = 2;
  int32 port = 3;
}

message Host {
  int32 id = 1;
  int32 orgId = 2;
  string name = 3;
  repeated HostTags tags = 4;
  repeated string allTags = 6;
  int32 numCpus = 7;
  int64 totalMemory = 8;
}

message HostTags {
  uint32 sourceType = 1;
  repeated string tags = 2;
}